# larixon_tst

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
larixon_tst/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  models.py  serializers.py  urls.py  views.py
main/management/commands/: generate_initial_data_for_test.py
main/migrations/: 0001_initial.py
tests/: factories.py
tests/models/: test_advert.py  test_category.py  test_city.py
tests/views/: test_advert_detail_view.py  test_advert_list_view.py
